--- a/etc/pptpd.conf
+++ b/etc/pptpd.conf
@@ -21,7 +21,7 @@ option /etc/ppp/options.pptpd
 # TAG: debug
 #	Turns on (more) debugging to syslog
 #
-#debug
+debug
 
 # TAG: stimeout
 #	Specifies timeout (in seconds) on starting ctrl connection
@@ -94,11 +94,6 @@ logwtmp
 #	   IP for each simultaneous client.
 #
 # (Recommended)
-localip 192.168.10.1
-remoteip 192.168.10.100-200
-# or
-#localip 192.168.0.234-238,192.168.0.245
-#remoteip 192.168.1.234-238,192.168.1.245
 
-#localip 10.0.0.1
-#remoteip 10.0.0.100-10.0.0.120
+localip 10.0.20.1
+remoteip 10.0.20.100-200
