update space-vim for gtags

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -261,12 +261,12 @@
 security = user
 [smb]
    comment = samba share
-;   browseable = yes
-;   writable = yes
+   browseable = yes
+   writable = yes
    read list = root,@sambashare
    write list = root,@sambashare
    force group = sambashare
    path = /opt/smb
-   # guest ok = no
+   guest ok = yes
    create mask = 0777
    directory mask = 0777
